# ray-tracer

./: CMakeLists.txt  Makefile  constants.h  constants.h.gch  hw6  hw6.cpp  phong.cpp  phong.h  point3d.cpp  point3d.h  ray3d.cpp  ray3d.h  readme.md  rgb.cpp  rgb.h  sphere3d.cpp  sphere3d.h  vec3d.cpp  vec3d.h
given/: classes2.h  classes2_test.cpp  phong2.cpp  phong2.h  phong2_test.cpp  project6.cpp
